# PlugFrame

./: .gitignore  CMakeLists.txt  ELEKDOM-PlugFrame.pro  GIT_WORKFLOW.md  LICENSE.txt  README.md
plugframe/: CMakeLists.txt  plugframe.pro
plugframe/bundles/: CMakeLists.txt  bundles.pro
plugframe/bundles-core/: CMakeLists.txt
plugframe/bundles-core/TBUNDLE/: CMakeLists.txt
plugframe/bundles-core/TBUNDLE/lib/: CMakeLists.txt  TBUNDLE.h  TBUNDLEbuilder.cpp  TBUNDLEfactory.cpp  TBUNDLEfactory.h  TBUNDLEservice.cpp
plugframe/bundles-core/TBUNDLE/plugin/: TBUNDLEplugin.cpp  TBUNDLEplugin.h
plugframe/bundles-core/framework/: CMakeLists.txt
plugframe/bundles-core/framework/lib/: CMakeLists.txt  frameworkfactory.h  frameworkstarterlistener.cpp  frameworkstarterlistener.h  serviceregistry.cpp  serviceregistry.h  systemservice.cpp  systemservice.h
plugframe/bundles-core/framework/plugin/: frameworkplugin.cpp  frameworkplugin.h
plugframe/bundles-core/logger/: CMakeLists.txt
plugframe/bundles-core/logger/lib/: CMakeLists.txt  logdevice.cpp  logdevice.h
plugframe/bundles-core/logger/plugin/: CMakeLists.txt
plugframe/bundles-core/users/conf/: users_example.ini
plugframe/bundles-core/users/lib/: CMakeLists.txt  loggeduser.h  loginservice.cpp  loginservice.h  users.h  usersfactory.cpp
plugframe/bundles-core/users/plugin/: usersplugin.cpp
plugframe/bundles-gui/: CMakeLists.txt
plugframe/bundles-gui/guiconsole/: CMakeLists.txt
plugframe/bundles-gui/guiconsole/lib/: CMakeLists.txt  guiconsole.h  guiconsolefactory.h
plugframe/bundles-gui/guiconsole/plugin/: guiconsoleplugin.cpp
plugframe/bundles-gui/guidisplay/: CMakeLists.txt
plugframe/bundles-gui/guidisplay/lib/: CMakeLists.txt  guibuilderservice.cpp  guibuilderservice.h  guidisplay_forward.h  guidisplayservice.h
plugframe/bundles-text/: CMakeLists.txt
plugframe/bundles-text/console/lib/: CMakeLists.txt  console.cpp  console.h  console_forward.h  consolefactory.cpp  consolelistener.cpp  terminal.cpp  terminal.h
plugframe/bundles-text/console/plugin/: consoleplugin.h
plugframe/bundles-text/display/: CMakeLists.txt  displaybundle.json
plugframe/bundles-text/display/lib/: CMakeLists.txt  display.cpp  display_forward.h  displayfactory.h
plugframe/bundles-text/display/plugin/: displayplugin.cpp
plugframe/bundles/TBUNDLE/: TBUNDLEbundle.json
plugframe/bundles/TBUNDLE/lib/: TBUNDLE.cpp  TBUNDLE_forward.h  TBUNDLEbuilder.h  TBUNDLEservice.h  lib.pro
plugframe/bundles/TBUNDLE/plugin/: TBUNDLEserviceinterface.h  plugin.pro
plugframe/bundles/console/: CMakeLists.txt  console.pro  consolebundle.json
plugframe/bundles/console/lib/: CMakeLists.txt  console.cpp  console.h  console_forward.h  consoleexit.cpp  consoleexit.h  lib.pro  (+6 more)
plugframe/bundles/framework/: framework.pro  frameworkbundle.json
plugframe/bundles/guiconsole/: guiconsolebundle.json
plugframe/bundles/guidisplay/: guidisplaybundle.json
plugframe/bundles/logger/: logger.pro  loggerbundle.json
plugframe/bundles/users/: CMakeLists.txt  users.json  users.pro
plugframe/core-lib/: CMakeLists.txt  core-lib.pro  pfcore-lib_export.h  pfcore-lib_forward.h
plugframe/core-lib/bundle/: bundle.cpp  bundle.h  bundle4builderinterface.h  bundle4plugininterface.h  bundlebuilder.cpp  bundlebuilder.h  bundlecontext.cpp  bundlecontext.h  bundleemitter.cpp  bundleemitter.h  bundleheaders.cpp  bundleheaders.h  bundleimplementation.cpp  bundleimplementation.h  bundlelistener.cpp  bundlelistener.h  bundlelistener4fws.cpp  bundlelistener4fws.h  bundleobject.cpp  bundleobject.h  longstartbundleimplementation.cpp  longstartbundleimplementation.h
plugframe/core-lib/event/: event.cpp  event.h  loopevent.cpp  loopevent.h
plugframe/core-lib/factory/: bundlefactory.cpp  bundlefactory.h  corefactory.cpp  corefactory.h  defaultbundlefactory.cpp  defaultbundlefactory.h
plugframe/core-lib/gui/: guipagecontroller.cpp  guipagecontroller.h  guipageview.cpp  guipageview.h
plugframe/core-lib/launcher/: bundlesstore.cpp  bundlesstore.h  consoleapplication.cpp  consoleapplication.h  guiapplication.cpp  guiapplication.h  launcher.cpp  launcher.h  launchingproperties.cpp  launchingproperties.h  location.cpp  location.h
plugframe/core-lib/logger/: loggable.cpp  loggable.h  pflog.h
plugframe/core-lib/plugin/: bundleinterface.h  frameworkinterface.h  plugin.cpp  plugin.h
plugframe/core-lib/scheduler/: dailyscheduler.cpp  dailyscheduler.h  digitalsuite.cpp  digitalsuite.h  scheduledevent.cpp  scheduledevent.h  scheduler.cpp  scheduler.h  schedulerbuilder.cpp  schedulerbuilder.h  schedulerelement.cpp  schedulerelement.h  schedulerelementhook.h  weeklyscheduler.cpp  weeklyscheduler.h
plugframe/core-lib/service/: serviceimplementation.cpp  serviceimplementation.h  serviceimplementationinterface.h
plugframe/core-lib/service-int/: backendcontrolserviceinterface.h  displayserviceinterface.h  frontendclientside.h  frontendcontrolserviceinterface.h  guibuilderserviceinterface.h  loginserviceinterface.h  serviceinterface.h  systemserviceinterface.h  systemserviceregistryinterface.h
plugframe/core-lib/worker/: worker.cpp  worker.h  workerargs.cpp  workerargs.h  workerouts.cpp  workerouts.h  workersignal.cpp  workersignal.h  workerthread.cpp  workerthread.h  workerwatcher.cpp  workerwatcher.h
plugframe/core-lib/xmldom/: browserhook.h  document.cpp  document.h  xmlbrowserhook.h  xmldocument.cpp  xmldocument.h
plugframe/gui-lib/: CMakeLists.txt  pfgui-lib_export.h
plugframe/gui-lib/gui/: guipagecontroller.cpp  guipagecontroller.h  guipageview.h
plugframe/gui-lib/launcher/: guiapplication.cpp  guiapplication.h
plugframe/launchers/: CMakeLists.txt  launchers.pro
plugframe/launchers/consolelauncher/: CMakeLists.txt  consolelauncher.pro  main.cpp  run-plugframe.sh
plugframe/launchers/guilauncher/: CMakeLists.txt  guilauncher.pro  guilauncher_resources.qrc  main.cpp  run-guiplugframe.sh
plugframe/launchers/qmllauncher/: CMakeLists.txt  main.cpp  qmllauncher.pro  qrc_qml.cpp
plugframe/scripts/: ._cp_meta_inf_unix  install_functs.py  install_plugframe.py
(+215 files in other folders)
